added base handler GET departments
